--- a/src/main/resources/templates/persona/personaEdit.html
+++ b/src/main/resources/templates/persona/personaEdit.html
@@ -227,50 +227,15 @@
 								</th:block>
 								<div th:if="${#fields.hasErrors('personaWrapper.persona.professione')}" class="alert" th:errors="${personaWrapper.persona.professione}"></div>
 							</div>
-																
-							<!-- fragment degli allegati -->
-							<th:block th:fragment="allegati(tipoAllegato, counter)" th:remove="all">
-								<div class="item form-group" th:classappend="${#fields.hasErrors('personaWrapper.__${tipoAllegato}__')} ? 'bad'">
-								<label class="control-label col-xs-1" th:text="${counter}">11</label>
-								<label class="control-label col-md-3 col-sm-3 col-xs-11" th:for="__${tipoAllegato}___persona">
-									<span th:text="#{label.__${tipoAllegato}__}">tipo allegato</span>
-									<span class="required">*</span>
-								</label>
-								<th:block th:if="${#lists.contains(personaWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-											<div class="form-control col-md-7 col-xs-12 btn" th:unless="${personaWrapper.__${tipoAllegato}__.data}">
-											<input type="file" th:id="__${tipoAllegato}___persona" th:name="__${tipoAllegato}___persona" required="required"
-												style="display: none;" />
-											<input type="button" class="pull-left allegato-btn" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}___persona');|" />
-											<div th:id="__${tipoAllegato}___persona_label" class="allegato-label" th:text="#{label.nessun_file_selezionato}">Nessun file selezionato</div>
-										</div>
-										<div class="form-control col-md-7 col-xs-12 btn" th:if="${personaWrapper.__${tipoAllegato}__.data}">
-											<input type="file" th:id="__${tipoAllegato}___persona" th:name="__${tipoAllegato}___persona" required="required"
-												style="display: none;" />
-											<input type="button" class="pull-left allegato-btn" th:value="#{label.scegli_file}" th:onclick="|setAllegato('#__${tipoAllegato}___persona');|" />
-											<a th:id="__${tipoAllegato}___persona_label" th:unless="${personaWrapper.__${tipoAllegato}__.new}" th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}|}" class="allegato-label"></a>
-											<a th:id="__${tipoAllegato}___persona_label" th:if="${personaWrapper.__${tipoAllegato}__.new}" th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" class="allegato-label"></a>
-										</div>
-									</div>
-								</th:block>
-								<th:block th:unless="${#lists.contains(personaWrapper.idEditabili, counter)}">
-									<div class="col-md-4 col-sm-4 col-xs-12">
-										<a th:id="__${tipoAllegato}___persona_disabled" class="form-control form-disabled-text clickable left-align col-md-7 col-xs-12"
-											th:text="${personaWrapper.__${tipoAllegato}__.nomeFile}" th:href="@{|/files/${personaWrapper.__${tipoAllegato}__.id}|}"></a>
-									</div>
-								</th:block>
-								<div th:if="${#fields.hasErrors('personaWrapper.__${tipoAllegato}__')}" class="alert" th:errors="${personaWrapper.__${tipoAllegato}__}"></div>
-							</div>
-							</th:block>
 							
 							<!-- allegato 1 (atto di nomina) -->
-							<th:block th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}" th:include="this :: allegati(attoNomina, ${++counter})"></th:block>
+							<th:block th:unless="${personaWrapper.persona.delegatoLegaleRappresentante}" th:include="fragments/allegati :: allegati(personaWrapper, attoNomina, ${++counter})" ></th:block>
 							
 							<!-- allegato 2 (curriculum vitae) -->
-							<th:block th:unless="${personaWrapper.persona.legaleRappresentante}" th:include="this :: allegati(cv, ${++counter})"></th:block>
+							<th:block th:unless="${personaWrapper.persona.legaleRappresentante}" th:include="fragments/allegati :: allegati(personaWrapper, cv, ${++counter})"></th:block>
 							
 							<!-- allegato 3 (delega) -->
-							<th:block th:if="${personaWrapper.persona.delegatoLegaleRappresentante}" th:include="this :: allegati(delega, ${++counter})"></th:block>
+							<th:block th:if="${personaWrapper.persona.delegatoLegaleRappresentante}" th:include="fragments/allegati :: allegati(personaWrapper, delega, ${++counter})"></th:block>
 							
 							<!-- Registra Persona -->
 							<div class="item form-group text-right">
@@ -280,16 +245,6 @@
 					</div>
 				</div>
 			</div>
-			<script>
-				function setAllegato(idInput) {
-					$(idInput).click();
-				}
-				
-				$('input[type=file]').change(function() {
-					$("#"+this.name+"_label").text(this.value.split('\\').pop());
-					$("#"+this.name+"_label").removeAttr('href');
-				});
-			</script>
 		</div>
 	</div>
 </body>
