--- a/src/main/resources/templates/provider/accreditamentoEdit.html
+++ b/src/main/resources/templates/provider/accreditamentoEdit.html
@@ -624,7 +624,7 @@
 					$.each(professioni.options, function(index, item) {
 						//toglie la parte relativa al codice della professione
 						prof = item.value;
-						prof = prof.substring(prof.indexOf(":") + 2);
+						//prof = prof.substring(prof.indexOf(":") + 2);
 						//abilita/disabilita tutte le discipline delle professioni selezionate/deselezionate
 						if (item.selected) {
 							$('optgroup[label="' + prof + '"]').prop(
