--- a/src/main/resources/templates/provider/accreditamentoEdit.html
+++ b/src/main/resources/templates/provider/accreditamentoEdit.html
@@ -624,6 +624,7 @@
 					$.each(professioni.options, function(index, item) {
 						//toglie la parte relativa al codice della professione
 						prof = item.text;
+						//git fa schifo
 						//abilita/disabilita tutte le discipline delle professioni selezionate/deselezionate
 						if (item.selected) {
 							$('optgroup[label="' + prof + '"]').prop(
