--- a/src/main/resources/templates/provider/accreditamentoEdit.html
+++ b/src/main/resources/templates/provider/accreditamentoEdit.html
@@ -623,8 +623,8 @@
 					var almenoUna = false;
 					$.each(professioni.options, function(index, item) {
 						//toglie la parte relativa al codice della professione
-						prof = item.value;
-						prof = prof.substring(prof.indexOf(":") + 2);
+						prof = item.text;
+						//prof = prof.substring(prof.indexOf(":") + 2);
 						//abilita/disabilita tutte le discipline delle professioni selezionate/deselezionate
 						if (item.selected) {
 							$('optgroup[label="' + prof + '"]').prop(
