Fix accreditamentoEdit. Ora utilizza il db

--- a/src/main/resources/templates/provider/accreditamentoEdit.html
+++ b/src/main/resources/templates/provider/accreditamentoEdit.html
@@ -176,39 +176,6 @@
 												<option th:each="professione, row: ${professioneList}"
 													th:value="${professione.id}" th:text="${professione.nome}" 
 													th:field="${datiAccreditamentoWrapper.datiAccreditamento.professioniSelezionate}">Medico chirurgo</option>
-												<option>2: Odontoiatra</option>
-												<option>3: Farmacista</option>
-												<option>4: Veterinario</option>
-												<option>5: Psicologo</option>
-												<option>6: Biologo</option>
-												<option>7: Chimico</option>
-												<option>8: Fisico</option>
-												<option>9: Assistente sanitario</option>
-												<option>10: Dietista</option>
-												<option>11: Educatore professionale</option>
-												<option>12: Fisioterapista</option>
-												<option>13: Igienista dentale</option>
-												<option>14: Infermiere</option>
-												<option>15: Infermiere pediatrico</option>
-												<option>16: Logopedista</option>
-												<option>17: Ortottista/Assistente di oftalmologia</option>
-												<option>18: Ostetrica/o</option>
-												<option>19: Podologo</option>
-												<option>20: Tecnico audiometrista</option>
-												<option>21: Tecnico audioprotesista</option>
-												<option>22: Tecnico della fisiopatologia
-													cardiocircolatoria e perfusione cardiovascolare</option>
-												<option>23: Tecnico della prevenzione nell'ambiente
-													e nei luoghi di lavoro</option>
-												<option>24: Tecnico della riabilitazione
-													psichiatrica</option>
-												<option>25: Tecnico di neurofisiopatologia</option>
-												<option>26: Tecnico ortopedico</option>
-												<option>27: Tecnico sanitario di radiologia medica</option>
-												<option>28: Tecnico sanitario laboratorio biomedico</option>
-												<option>29: Terapista della neuro e psicomotricità
-													dell'età evolutiva</option>
-												<option>30: Terapista occupazionale</option>
 											</select>
 										</div>
 										<div class="col-xs-12">
@@ -226,188 +193,7 @@
 													<option th:each="disciplina, row: ${disciplinaList}"
 													th:if="${disciplina.professione == professione}"
 													th:value="${disciplina.id}" th:text="${disciplina.nome}" 
-													th:field="${datiAccreditamentoWrapper.datiAccreditamento.discipline}">1: Allergologia ed immunologia clinica</option>
-													<option>2: Angiologia</option>
-													<option>3: Cardiologia</option>
-													<option>4: Dermatologia e venereologia</option>
-													<option>5: Ematologia</option>
-													<option>6: Endocrinologia</option>
-													<option>7: Gastroenterologia</option>
-													<option>8: Genetica medica</option>
-													<option>9: Geriatria</option>
-													<option>10: Malattie metaboliche e diabetologia</option>
-													<option>11: Malattie dell'apparato respiratorio</option>
-													<option>12: Malattie infettive</option>
-													<option>13: Medicina e chirurgia di accettazione e
-														di urgenza</option>
-													<option>14: Medicina fisica e riabilitazione</option>
-													<option>15: Medicina interna</option>
-													<option>16: Medicina termale</option>
-													<option>17: Medicina aeronautica e spaziale</option>
-													<option>18: Medicina dello sport</option>
-													<option>19: Nefrologia</option>
-													<option>20: Neonatologia</option>
-													<option>21: Neurologia</option>
-													<option>22: Neuropsichiatria infantile</option>
-													<option>23: Oncologia</option>
-													<option>24: Pediatria</option>
-													<option>25: Psichiatria</option>
-													<option>26: Radioterapia</option>
-													<option>27: Reumatologia</option>
-													<option>29: Cardiochirurgia</option>
-													<option>30: Chirurgia generale</option>
-													<option>31: Chirurgia maxillo-facciale</option>
-													<option>32: Chirurgia pediatrica</option>
-													<option>33: Chirurgia plastica e ricostruttiva</option>
-													<option>34: Chirurgia toracica</option>
-													<option>35: Chirurgia vascolare</option>
-													<option>36: Ginecologia e ostetricia</option>
-													<option>37: Neurochirurgia</option>
-													<option>38: Oftalmologia</option>
-													<option>39: Ortopedia e traumatologia</option>
-													<option>40: Otorinolaringoiatria</option>
-													<option>41: Urologia</option>
-													<option>42: Anatomia patologica</option>
-													<option>43: Anestesia e rianimazione</option>
-													<option>44: Biochimica clinica</option>
-													<option>45: Farmacologia e tossicologia clinica</option>
-													<option>46: Laboratorio di genetica medica</option>
-													<option>47: Medicina trasfusionale</option>
-													<option>48: Medicina legale</option>
-													<option>49: Medicina nucleare</option>
-													<option>50: Microbiologia e virologia</option>
-													<option>51: Neurofisiopatologia</option>
-													<option>52: Neuroradiologia</option>
-													<option>53: Patologia clinica (laboratorio di
-														analisi chimico-cliniche e microbiologia)</option>
-													<option>54: Radiodiagnostica</option>
-													<option>55: Igiene, epidemiologia e sanità pubblica</option>
-													<option>56: Igiene degli alimenti e della
-														nutrizione</option>
-													<option>57: Medicina del lavoro e sicurezza degli
-														ambienti di lavoro</option>
-													<option>58: Medicina generale (medici di famiglia)</option>
-													<option>59: Continuità assistenziale</option>
-													<option>60: Pediatria (pediatri di libera scelta)</option>
-													<option>106: Scienza dell'alimentazione e dietetica</option>
-													<option>107: Direzione medica di presidio
-														ospedaliero</option>
-													<option>108: Organizzazione dei servizi sanitari di
-														base</option>
-													<option>111: Audiologia e foniatria</option>
-													<option>112: Psicoterapia</option>
-													<option>113: Privo di specializzazione</option>
-													<option>114: Cure palliative</option>
-													<option>115: Epidemiologia</option>
-													<option>116: Medicina di comunità</option>
-												</optgroup>
-												<optgroup label="Odontoiatra" disabled="disabled">
-													<option>64: Odontoiatria</option>
-												</optgroup>
-												<optgroup label="Farmacista" disabled="disabled">
-													<option>66: Farmacia ospedaliera</option>
-													<option>67: Farmacia territoriale</option>
-												</optgroup>
-												<optgroup label="Veterinario" disabled="disabled">
-													<option>61: Igiene degli allevamenti e delle
-														produzioni zootecniche</option>
-													<option>62: Igiene prod., trasf., commercial.,
-														conserv. E tras. Alimenti di origine animale e derivati</option>
-													<option>63: Sanità animale</option>
-												</optgroup>
-												<optgroup label="Psicologo" disabled="disabled">
-													<option>77: Psicoterapia</option>
-													<option>78: Psicologia</option>
-												</optgroup>
-												<optgroup label="Biologo" disabled="disabled">
-													<option>68: Biologo</option>
-												</optgroup>
-												<optgroup label="Chimico" disabled="disabled">
-													<option>76: Chimica analitica</option>
-												</optgroup>
-												<optgroup label="Fisico" disabled="disabled">
-													<option>79: Fisica sanitaria</option>
-												</optgroup>
-												<optgroup label="Assistente sanitario" disabled="disabled">
-													<option>80: Assistente sanitario</option>
-												</optgroup>
-												<optgroup label="Dietista" disabled="disabled">
-													<option>81: Dietista</option>
-												</optgroup>
-												<optgroup label="Educatore professionale" disabled="disabled">
-													<option>83: Educatore professionale</option>
-												</optgroup>
-												<optgroup label="Fisioterapista" disabled="disabled">
-													<option>82: Fisioterapista</option>
-												</optgroup>
-												<optgroup label="Igienista dentale" disabled="disabled">
-													<option>84: Igienista dentale</option>
-												</optgroup>
-												<optgroup label="Infermiere" disabled="disabled">
-													<option>85: Infermiere</option>
-												</optgroup>
-												<optgroup label="Infermiere pediatrico" disabled="disabled">
-													<option>86: Infermiere pediatrico</option>
-												</optgroup>
-												<optgroup label="Logopedista" disabled="disabled">
-													<option>87: Logopedista</option>
-												</optgroup>
-												<optgroup label="Ortottista/Assistente di oftalmologia"
-													disabled="disabled">
-													<option>88: Ortottista/Assistente di oftalmologia</option>
-												</optgroup>
-												<optgroup label="Ostetrica/o" disabled="disabled">
-													<option>89: Ostetrica/o</option>
-												</optgroup>
-												<optgroup label="Podologo" disabled="disabled">
-													<option>90: Podologo</option>
-												</optgroup>
-												<optgroup label="Tecnico audiometrista" disabled="disabled">
-													<option>95: Tecnico audiometrista</option>
-												</optgroup>
-												<optgroup label="Tecnico audioprotesista" disabled="disabled">
-													<option>96: Tecnico audioprotesista</option>
-												</optgroup>
-												<optgroup
-													label="Tecnico della fisiopatologia cardiocircolatoria e perfusione cardiovascolare"
-													disabled="disabled">
-													<option>92: Tecnico della fisiopatologia
-														cardiocircolatoria e perfusione cardiovascolare</option>
-												</optgroup>
-												<optgroup
-													label="Tecnico della prevenzione nell'ambiente e nei luoghi di lavoro"
-													disabled="disabled">
-													<option>105: Tecnico della prevenzione
-														nell'ambiente e nei luoghi di lavoro</option>
-												</optgroup>
-												<optgroup label="Tecnico della riabilitazione psichiatrica"
-													disabled="disabled">
-													<option>91: Tecnico della riabilitazione
-														psichiatrica</option>
-												</optgroup>
-												<optgroup label="Tecnico di neurofisiopatologia"
-													disabled="disabled">
-													<option>98: Tecnico di neurofisiopatologia</option>
-												</optgroup>
-												<optgroup label="Tecnico ortopedico" disabled="disabled">
-													<option>99: Tecnico ortopedico</option>
-												</optgroup>
-												<optgroup label="Tecnico sanitario di radiologia medica"
-													disabled="disabled">
-													<option>94: Tecnico sanitario di radiologia medica</option>
-												</optgroup>
-												<optgroup label="Tecnico sanitario laboratorio biomedico"
-													disabled="disabled">
-													<option>93: Tecnico sanitario laboratorio biomedico</option>
-												</optgroup>
-												<optgroup
-													label="Terapista della neuro e psicomotricità dell'età evolutiva"
-													disabled="disabled">
-													<option>100: Terapista della neuro e psicomotricità
-														dell'età evolutiva</option>
-												</optgroup>
-												<optgroup label="Terapista occupazionale" disabled="disabled">
-													<option>101: Terapista occupazionale</option>
+													th:field="${datiAccreditamentoWrapper.datiAccreditamento.discipline}">Allergologia ed immunologia clinica</option>
 												</optgroup>
 											</select>
 										</div>
