--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -212,7 +212,7 @@
 											</select>
 										</div>
 										<div class="col-xs-12">
-											<select id="discipline" class="selectpicker"
+											<select id="discipline" class="selectpicker" th:field="${datiAccreditamentoWrapper.datiAccreditamento.discipline}"
 												multiple="multiple" data-width="100%"
 												data-style="btn-success" data-actions-box="true"
 												data-size="10" data-hide-disabled="true"
@@ -225,8 +225,7 @@
 													th:remove="all-but-first">
 													<option th:each="disciplina, row: ${disciplinaList}"
 													th:if="${disciplina.professione == professione}"
-													th:value="${disciplina.id}" th:text="${disciplina.nome}" 
-													th:field="${datiAccreditamentoWrapper.datiAccreditamento.discipline}">1: Allergologia ed immunologia clinica</option>
+													th:value="${disciplina.id}" th:text="${disciplina.nome}">1: Allergologia ed immunologia clinica</option>
 													<option>2: Angiologia</option>
 													<option>3: Cardiologia</option>
 													<option>4: Dermatologia e venereologia</option>
