--- a/src/main/resources/templates/provider/accreditamentoEdit.html
+++ b/src/main/resources/templates/provider/accreditamentoEdit.html
@@ -402,6 +402,8 @@
 						deselectAllText : 'Deseleziona tutti',
 						countSelectedText : '{0} selezionate'
 					});
+					
+					abilitaDiscipline($('#professioni'));				
 				});
 				
 				function abilitaDiscipline(professioni) {
