sblocca select se ci sono professioni selezionate

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -401,6 +401,8 @@
 						deselectAllText : 'Deseleziona tutti',
 						countSelectedText : '{0} selezionate'
 					});
+					
+					abilitaDiscipline("#professioni");
 				});
 				
 				function abilitaDiscipline(professioni) {
