fix controlli generale/settoriale per le professioni/discipline

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -401,8 +401,14 @@
 						deselectAllText : 'Deseleziona tutti',
 						countSelectedText : '{0} selezionate'
 					});
+				
+					abilitaDiscipline($("#professioni")[0]);
 					
-					abilitaDiscipline("#professioni");
+					
+					if($('#generaleProf').is(':checked')) {
+						$('button[data-id="professioni"]').prop('disabled', true);
+						$('button[data-id="discipline"]').prop('disabled', true);
+					}		
 				});
 				
 				function abilitaDiscipline(professioni) {
