--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -125,6 +125,9 @@ body.nav-md .container.body .right_col.main{
 	text-align: left;
 }
 
+table.datatable-responsive-form thead .sorting_asc:after {
+	visibility: hidden;
+}
 
 
 
