Bugfix gestione allegati DatiEconomici

--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -294,7 +294,7 @@
 							<div class="divider-dashed"></div>
 							
 							<!-- allegato 1 (etratto bilancio relativo formazione) -->
-							<th:block th:include="fragments/allegati :: allegati(accreditamentoWrapper, estrattoBilancioFormazione, ${++counter})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, estrattoBilancioFormazione, ${++counter})" ></th:block>
 							
 							<div class="divider-dashed"></div>
 							
@@ -365,7 +365,7 @@
 							<div class="divider-dashed"></div>
 							
 							<!-- allegato 2 (budget previsionale) -->
-							<th:block th:include="fragments/allegati :: allegati(accreditamentoWrapper, budgetPrevisionale, ${++counter})" ></th:block>
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, budgetPrevisionale, ${++counter})" ></th:block>
 							
 							<div class="divider-dashed"></div>
 							
