--- a/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
+++ b/src/main/resources/templates/accreditamento/datiAccreditamentoEdit.html
@@ -417,6 +417,12 @@
 								<div th:if="${#fields.hasErrors('datiAccreditamentoWrapper.datiAccreditamento.numeroDipendentiFormazioneAltro')}" class="alert" th:errors="${datiAccreditamentoWrapper.datiAccreditamento.numeroDipendentiFormazioneAltro}"></div>
 							</div>
 							
+							<!-- allegato 3 (organigramma) -->
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, organigramma, ${++counter})" ></th:block>
+							
+							<!-- allegato 4 (funzionigramma) -->
+							<th:block th:include="fragments/allegati :: allegati(datiAccreditamentoWrapper, funzionigramma, ${++counter})" ></th:block>
+							
 							<!-- Registra Dati Accreditamento -->
 							<div class="item form-group text-right">
 								<input class="btn btn-primary right" type="submit" th:value="#{label.salva}"/>
