--- a/src/main/resources/static/css/main.css
+++ b/src/main/resources/static/css/main.css
@@ -129,5 +129,11 @@ table.datatable-responsive-form thead .sorting_asc:after {
 	visibility: hidden;
 }
 
+.dropdown-header {
+	background-color: #5cb85c;
+	color: white;
+	font-weight: bold;
+	margin-bottom: 5px;
+}
 
 
